# crispy-adventure

./: .buildinfo  .gitignore  README.md  brownian.html  cpp.html  genindex.html  index.html  objects.inv  proposal.html  py-modindex.html  pyproject.toml  python.html  ra.html  references.txt  ros2.html  search.html  searchindex.js
.doctrees/: brownian.doctree  cpp.doctree  environment.pickle  index.doctree  proposal.doctree  python.doctree  ra.doctree  ros2.doctree
RoboticsAcademy/: Line_Follower_Testing.ipynb.data  PID_controller.py.data  P_controller.py.data  README.md  Ziegler–Nichols.py.data
_modules/: index.html
_modules/python/: brownian.html
_sources/: brownian.rst.txt  index.md.txt  proposal.md.txt  ra.md.txt  ros2.md.txt
_static/: brownian.mkv
_static/css/: custom.css
docs/: conf.py  cpp.md  index.md  proposal.md  python.md  ra.md  ros2.md
docs/_static/: ra_media
docs/ros2/: laser_scan.md  navigation.md  ros2_is_fun.md
python/: brownian.py
ros2_ws/src/jde_ros2_asgn/: CMakeLists.txt  package.xml
ros2_ws/src/jde_ros2_asgn/launch/: display.launch.py  laser_scan.launch.py  navingation_tb3.launch.py
ros2_ws/src/jde_ros2_asgn/maps/: my_cafe.pgm  my_cafe.yaml  myworld.pgm  myworld.yaml  turtlebot3_world.pgm  turtlebot3_world.yaml
ros2_ws/src/jde_ros2_asgn/rviz/: laser_scan.rviz  mapping.rviz
ros2_ws/src/jde_ros2_asgn/worlds/: dynamic_world.world  my_world.world  racecar_tunnel.world
ros2_ws/src/ros2_is_fun/: CMakeLists.txt  package.xml
ros2_ws/src/ros2_is_fun/src/: publisher.cpp  subscriber.cpp
